// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component prop snapshots all props are not set 1`] = `
<scale-logo>
  <mock:shadow-root>
    <style>
      :host {
      --logo-size: 36px;
    }
    </style>
    <a aria-label="Telekom Logo" class="logo logo--variant-magenta" role="link" tabindex="0">
      <scale-logo-svg accessibilitytitle="Telekom Logo" color="magenta" language="en" size="36"></scale-logo-svg>
    </a>
  </mock:shadow-root>
</scale-logo>
`;

exports[`component prop snapshots all props are set 1`] = `
<scale-logo>
  <mock:shadow-root>
    <style>
      :host {
      --logo-size: 100px;
    }
    </style>
    <a aria-label="Telekom Logo" class="logo logo--transparent logo--variant-white" href="https://www.telekom.de/start" role="link" tabindex="0">
      <scale-logo-svg accessibilitytitle="Telekom Logo" color="white" language="hr" size="100"></scale-logo-svg>
    </a>
  </mock:shadow-root>
</scale-logo>
`;

exports[`component prop snapshots all props should handle no link 1`] = `
<scale-logo>
  <mock:shadow-root>
    <style>
      :host {
      --logo-size: 36px;
    }
    </style>
    <div aria-label="Telekom Logo" class="logo logo--variant-magenta" role="img" tabindex="0">
      <scale-logo-svg accessibilitytitle="Telekom Logo" color="magenta" language="en" size="36"></scale-logo-svg>
    </div>
  </mock:shadow-root>
</scale-logo>
`;
